# magima-kids-runpod

./: .gitignore  README.md  SETUP-STATUS.md  pyproject.toml
AI-MODELS/LTX-2/: LTX-2-CLOUD-DEPLOYMENT.md
docs/: LTX2-EXPERIMENTS.md
research/: GPU-COMPARISON.md  LTX2-BEST-PRACTICES.md
scripts/: pull-outputs.sh  setup-runpod.sh  warmup.py
src/: __init__.py
src/api/: __init__.py  server.py
src/models/: __init__.py  ltx.py
src/pipelines/: __init__.py  generate.py
